--- a/diodata.html
+++ b/diodata.html
@@ -10,4 +10,8 @@
 <font face="Arial, Helvetica, sans-serif">Dafa Habibi</font>
 <br/>
 <font face="Arial, Helvetica, sans-serif">2*-1*-200*</font>
-<html>
+</br>
+ <font face="Arial, Helvetica, sans-serif">tanggal jadian</font>
+  <br/>
+   <font face="Arial, Helvetica, sans-serif">28-04-2024</font>
+</html>
